--- a/main.html
+++ b/main.html
@@ -5,6 +5,9 @@
     <meta charaset="UTF-08">
     <title>Round_phu</title>
 
+        <!--modernizrとローダースクリプト挿入、まだloader.jsはつくってないけど。。。-->
+    <script src="scripts/modernizr.js"></script>
+    <script src="scripts/loader.js"></script>
     <link rel="stylesheet" href="styles/main.css" />
 </head>
 
