--- a/main.html
+++ b/main.html
@@ -13,6 +13,11 @@
 
 <body>
     <div id="game">
+        <!-- スプラッシュ画面出すよ〜-->
+        <div class="screen" id="splach-screen">
+            <hi class="logo">Round_phu</hi>
+            <span class="continue">Click to Start</span>
+        </div>
         <!--ここにゲームの内容がはいる-->
     </div>
 </body>
