--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="screen" id="splach-screen">
             <hi class="logo">Round_phu</hi>
             <span class="continue">Click to Start</span>
+            <h3>created by NY</h3>
         </div>
         <!--ここにゲームの内容がはいる-->
     </div>
