--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html lang="en-US">
 <head>
     <meta charaset="UTF-08">
+    <meta name="viewport"
+        content="width=device-width,user-scalable=no">        
+        <!-- viewportってなんだろう？userscalable無効化-->
     <title>Round_phu</title>
 
         <!--modernizrとローダースクリプト挿入、まだloader.jsはつくってないけど。。。-->
