--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         <!--modernizrとローダースクリプト挿入、まだloader.jsはつくってないけど。。。-->
     <script src="scripts/modernizr.js"></script>
-    <script src="scripts/loader.js"></script>
-    <link rel="stylesheet" href="styles/main.css" />
+    <script src="Users/nyzyanai/Documents/GitHub/Round_phu/scripts/loader.js"></script>
+    <link rel="stylesheet" href="Users/nyzyanai/Documents/GitHub/Round_phu/styles/main.css" />
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             <span class="continue">Click to Start</span>
             <h3>created by NY</h3>
         </div>
-        <!--ここにゲームの内容がはいる-->
+                <!--ここにゲームの内容がはいる-->
     </div>
 </body>
 </html>
