--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--modernizrとローダースクリプト挿入、まだloader.jsはつくってないけど。。。-->
     <script src="scripts/modernizr.js"></script>
     <script src="Users/nyzyanai/Documents/GitHub/Round_phu/scripts/loader.js"></script>
-    <link rel="stylesheet" href="Round_phu_2/styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
 
 <body>
