--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <div class="screen" id="splach-screen">
             <hi class="logo">Round_phu</hi>
             <span class="continue">Click to Start</span>
+            <img src="src_phu/fullscreen/round_phu.png">
+            
             <h3>created by NY</h3>
         </div>
                 <!--ここにゲームの内容がはいる-->
