--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <!--modernizrとローダースクリプト挿入、まだloader.jsはつくってないけど。。。-->
     <script src="scripts/modernizr.js"></script>
-    <script src="Users/nyzyanai/Documents/GitHub/Round_phu/scripts/loader.js"></script>
+    <script src="scripts/loader.js"></script>
     <link rel="stylesheet" href="styles/main.css" />
 </head>
 
@@ -21,8 +21,8 @@
         <div class="screen" id="splach-screen">
             <hi class="logo">Round_phu</hi>
             <span class="continue">Click to Start</span>
-            <img src="src_phu/fullscreen/round_phu.png">
-            
+            <!--img src="src_phu/fullscreen/round_phu.png">-->
+
             <h3>created by NY</h3>
         </div>
                 <!--ここにゲームの内容がはいる-->
