--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Round_phu</title>
 
         <!--modernizrとローダースクリプト挿入、まだloader.jsはつくってないけど。。。-->
-    <script src="scripts/modernizr.js"></script>
+    <script src="scripts/Modernizr.js"></script>
     <script src="scripts/loader.js"></script>
     <link rel="stylesheet" href="styles/main.css" />
 </head>
