--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <title>Round_phu</title>
 
         <!--modernizrとローダースクリプト挿入、まだloader.jsはつくってないけど。。。-->
+
     <script src="scripts/Modernizr.js"></script>
+    <!--script src="../yepnope.js/src/yepnope.js"></script>-->
     <script src="scripts/loader.js"></script>
+
     <link rel="stylesheet" href="styles/main.css" />
 </head>
 
