--- a/index.html
+++ b/index.html
@@ -16,17 +16,7 @@
 </head>
 
 <body>
-    <div id="game">
-        <!-- スプラッシュ画面出すよ〜-->
-        <div class="screen" id="splach-screen">
-            <hi class="logo">Round_phu</hi>
-            <span class="continue">Click to Start</span>
-            <!--img src="src_phu/fullscreen/round_phu.png">-->
-
-            <h3>created by NY</h3>
-        </div>
-                <!--ここにゲームの内容がはいる-->
-    </div>
+    <canvas id ="Round_phu" width="1600" height="900"></canvas>
 </body>
 </html>
 
