--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
 
         <!-- viewportってなんだろう？userscalable無効化-->
     <title>Round_phu</title>
-
-        <!--modernizrとローダースクリプト挿入、まだloader.jsはつくってないけど。。。-->
-    <script src="scripts/Modernizr.js"></script>
-    <script src="scripts/loader.js"></script>
     <link rel="stylesheet" href="styles/main.css" />
+    <script src="scripts/splash-screen.js"> </script>
 </head>
 
-<body>
+<body onload="imageDraw()">
     <canvas id ="Round_phu" width="1600" height="900"></canvas>
 </body>
 </html>
