--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body onload="imageDraw()">
-    <canvas id ="Round_phu" width="1600" height="900"></canvas>
+    <div id="wrapper">
+    <canvas id ="Round_phu"></canvas>
+    </div>
 </body>
 </html>
 
