やっったー

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body onload="imageDraw()">
     <div id="wrapper">
-    <canvas id ="Round_phu"></canvas>
+    <canvas id ="canvas"></canvas>
     </div>
 </body>
 </html>
