--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!-- viewportってなんだろう？userscalable無効化-->
     <title>Round_phu</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <script src="scripts/canvas_lib.js"></script>
     <script src="scripts/splash-screen.js"> </script>
 </head>
 
