--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
         <!-- viewportってなんだろう？userscalable無効化-->
     <title>Round_phu</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <script src="scripts/touchevent.js"></script>
     <script src="scripts/canvas_lib.js"></script>
     <script src="scripts/splash-screen.js"> </script>
 </head>
 
-<body onload="imageDraw()">
+<body>
     <div id="wrapper">
-    <canvas id ="canvas"></canvas>
+        <canvas id ="canvas"></canvas>
     </div>
 </body>
 </html>
 
+<!--
 <div id="game">
     <div class="screen" id="splach-screen"></div>
     <div class="screen" id="main-menu"></div>
     <div class="screen" id="game-screen"></div>
     <div class="screen" id="name-of-us"></div>
 </div>
+-->
