--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
         <!-- viewportってなんだろう？userscalable無効化-->
     <title>Round_phu</title>
     <link rel="stylesheet" href="styles/main.css" />
-    <script src="scripts/touchevent.js"></script>
+
     <script src="scripts/canvas_lib.js"></script>
+    <script src="scripts/touchevent.js"></script>
+
     <script src="scripts/splash-screen.js"> </script>
+    <script src="scripts/setup.js"></script>
 </head>
 
 <body>
