--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="scripts/touchevent.js"></script>
 
     <script src="scripts/splash-screen.js"> </script>
-    <script src="scripts/setup.js"></script>
+    <script src="scripts/main.js"></script>
 </head>
 
 <body>
