--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
     <script src="scripts/splash-screen.js"> </script>
     <script src="scripts/touchevent.js"></script>
-    
+    <script src="scripts/phu_start.js"></script>
     <script src="scripts/main.js"></script>
+
 </head>
 
 <body>
