--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="styles/main.css" />
 
     <script src="scripts/canvas_lib.js"></script>
-
-
+    <script src="scripts/movie.js"></script>
     <script src="scripts/splash-screen.js"> </script>
     <script src="scripts/touchevent.js"></script>
     <script src="scripts/phu_start.js"></script>
