--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <script src="scripts/movie.js"></script>
     <script src="scripts/phu_start.js"></script>
     <script src="scripts/touchevent.js"></script>
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     <script src="scripts/main.js"></script>
 
 </head>
@@ -24,6 +25,8 @@
 <body>
     <div id="wrapper">
         <canvas id ="canvas"></canvas>
+        <p>テスト</p>
+        <p>Are you going to scarborough fair?</p>
     </div>
 </body>
 </html>
