--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <canvas id ="canvas"></canvas>
         <p>テスト</p>
         <p>Are you going to scarborough fair?</p>
+        <p>どうやったら端末に合わせたサイズが表示できるんですか？？？？</p>
     </div>
 </body>
 </html>
