--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <script src="scripts/splash-screen.js"> </script>
     <script src="scripts/movie.js"></script>
+    <script src="scripts/word.js"></script>
     <script src="scripts/phu_start.js"></script>
     <script src="scripts/touchevent.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -25,9 +26,6 @@
 <body>
     <div id="wrapper">
         <canvas id ="canvas"></canvas>
-        <p>テスト</p>
-        <p>Are you going to scarborough fair?</p>
-        <p>どうやったら端末に合わせたサイズが表示できるんですか？？？？</p>
     </div>
 </body>
 </html>
