フィルターチャレンジ１年生

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
 <body>
     <div id="wrapper">
-        <canvas id ="canvas"></canvas>
+        
+            <canvas id="filter"></canvas>
+            <canvas id="canvas"></canvas>
     </div>
 </body>
 </html>
