座標がおかしい

--- a/index.html
+++ b/index.html
@@ -21,20 +21,26 @@
 
     <script src="scripts/word.js"></script>
     <script src="scripts/phu_start.js"></script>
-    <script src="scripts/touchevent.js"></script>
+    <script src="scripts/music.js"></script>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     <script src="scripts/main2.js"></script>
-
+    <audio>
+        <source src="src/music/family_circle.mp3" type="audio/mp3">
+    </audio>
 </head>
 
 <body>
+
+
     <div id="wrapper">
 
 
 
-        <canvas id="filter"></canvas>
+        <!--<canvas id="filter"></canvas>-->
         <canvas id="canvas"></canvas>
+        
     </div>
 </body>
 
