--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <link rel="stylesheet" href="styles/main.css" />
 
     <script src="scripts/canvas_lib2.js"></script>
-    <script src="scripts/filter.js"></script>
+
     <script src="scripts/functions/splash_screen_f.js"></script>
     <script src="scripts/functions/function.js"></script>
+    <script src="scripts/functions/debag.js"></script>
     <script src="scripts/functions/touchevent2.js"></script>
     <script src="scripts/splash-screen.js"> </script>
     <script src="scripts/movie.js"></script>
