--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="scripts/functions/touchevent2.js"></script>
     <script src="scripts/splash-screen.js"> </script>
     <script src="scripts/movie.js"></script>
-
+    <script src="scripts/functions/stage_1_f.js"></script>
     <script src="scripts/word.js"></script>
     <script src="scripts/phu_start.js"></script>
     <script src="scripts/music.js"></script>
