関数化成功！！！

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="scripts/functions/function.js"></script>
     <script src="scripts/functions/debag.js"></script>
     <script src="scripts/functions/touchevent2.js"></script>
+    <script src="scripts/functions/stage_1_src_load.js"></script>
     <script src="scripts/splash-screen.js"> </script>
     <script src="scripts/movie.js"></script>
     <script src="scripts/functions/stage_1_f.js"></script>
