--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/main.css" />
 
     <script src="scripts/canvas_lib2.js"></script>
+   
 
     <script src="scripts/functions/splash_screen_f.js"></script>
     <script src="scripts/functions/function.js"></script>
@@ -24,7 +25,7 @@
     <script src="scripts/word.js"></script>
     <script src="scripts/phu_start.js"></script>
     <script src="scripts/music.js"></script>
-
+    <script src="scripts/functions/stage_2_src_loads.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     <script src="scripts/main2.js"></script>
