逆転裁判メソッド！！！！

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     <script src="scripts/main2.js"></script>
-    <audio>
+    <audio class="background_audio">
         <source src="src/music/family_circle.mp3" type="audio/mp3">
+    </audio>
+    <audio class="text_audio">
+        <source src="src/music/決定、ボタン押下2.mp3" type="audio/mp3">
     </audio>
 </head>
 
