--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="scripts/functions/stage_2_f.js"></script>
     <script src="scripts/word.js"></script>
     <script src="scripts/phu_start.js"></script>
-    <script src="scripts/music.js"></script>
+
     <script src="scripts/functions/stage_2_src_load.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
@@ -38,15 +38,15 @@
     <audio class="text_audio">
         <source src="src/music/決定、ボタン押下2.mp3" type="audio/mp3">
     </audio>
+    <audio class="settings_select">
+        <source src="src/music/決定、ボタン押下29.mp3" type="audio/mp3">
+    </audio>
 </head>
 
 <body>
 
 
     <div id="wrapper">
-
-
-
         <!--<canvas id="filter"></canvas>-->
         <canvas id="canvas"></canvas>
       
@@ -87,6 +87,8 @@
 </body>
 
 </html>
+
+<script src="scripts/music.js"></script>
 <script src="scripts/functions/settings.js"></script>
 <!--
 <div id="game">
