--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <audio class="settings_select">
         <source src="src/music/決定、ボタン押下29.mp3" type="audio/mp3">
     </audio>
+    <audio class="cannot">
+        <source src="src/music/ビープ音.mp3" type="audio/mp3">
+    </audio>
 </head>
 
 <body>
